--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Log In", "Login", "Users")</li>
+                    <li>@Html.ActionLink("Log Out", "Logout", "Users")</li>
+                    <li><a>User: @HttpContext.Current.Session["USERID"]</a></li>
                 </ul>
             </div>
         </div>
