Use constant for session var name, tidy up login/out links

--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -20,9 +20,14 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (HttpContext.Current.Session[Globals.USER_SESSION_VARIABLE_NAME] == null)
+                    {
                     <li>@Html.ActionLink("Log In", "Login", "Users")</li>
+                    }
+                    else
+                    {
                     <li>@Html.ActionLink("Log Out", "Logout", "Users")</li>
-                    <li><a>User: @HttpContext.Current.Session["USERID"]</a></li>
+                    }
                 </ul>
             </div>
         </div>
