Implement MonthlyBudget CRUD

--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
+                    <li>@Html.ActionLink("Budgets", "Index", "MonthlyBudgets")</li>
                     @if (HttpContext.Current.Session[Globals.USER_SESSION_VARIABLE_NAME] == null)
                     {
                     <li>@Html.ActionLink("Log In", "Login", "Users")</li>
