--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
                     <li>@Html.ActionLink("Budgets", "Index", "MonthlyBudgets")</li>
+                    <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                     @if (HttpContext.Current.Session[Globals.USER_SESSION_VARIABLE_NAME] == null)
                     {
                     <li>@Html.ActionLink("Log In", "Login", "Users")</li>
