--- a/money.web/Views/Accounts/Index.cshtml
+++ b/money.web/Views/Accounts/Index.cshtml
@@ -9,7 +9,7 @@
         <h1>Accounts</h1>
         @foreach(var account in Model.Accounts)
         {
-            <p>@account.Name @Html.ActionLink("Edit", "Update", new { id = account.ID })</p>
+            <p>@account.Name @Html.ActionLink("Edit", "Update", new { id = account.ID }) @Html.ActionLink("Budgets", "Index", "MonthlyBudgets", new { id = account.ID }, null)</p>
         }
         @Html.ActionLink("New", "Create")
     </div>
