--- a/money.web/Views/MonthlyBudgets/Create.cshtml
+++ b/money.web/Views/MonthlyBudgets/Create.cshtml
@@ -10,6 +10,7 @@
         @using (Html.BeginForm())
         {
             @Html.EditorForModel()
+            @Html.EditorFor(x => x.Categories)
             <input type="submit" value="Create" />
         }
     </div>
