--- a/money.web/Views/MonthlyBudgets/Index.cshtml
+++ b/money.web/Views/MonthlyBudgets/Index.cshtml
@@ -11,6 +11,6 @@
         {
             <p>@monthlyBudget.StartDate - @monthlyBudget.EndDate @Html.ActionLink("Edit", "Update", new { id = monthlyBudget.ID })</p>
         }
-        @Html.ActionLink("New", "Create")
+        @Html.ActionLink("New", "Create", new { id = Model.AccountID })
     </div>
 </div>
