Basic scaffolding for entry add and dashboard/overview

--- a/money.web/Views/Entries/Create.cshtml
+++ b/money.web/Views/Entries/Create.cshtml
@@ -9,7 +9,22 @@
         <h1>Create Entry</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
+            @Html.LabelFor(x => x.AccountID)
+            @Html.DropDownListFor(x => x.AccountID, Model.Accounts)<br />
+            @Html.LabelFor(x => x.MonthlyBudgetID)
+            @Html.DropDownListFor(x => x.MonthlyBudgetID, Model.MonthlyBudgets)<br />
+            @Html.LabelFor(x => x.CategoryID)
+            @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--")<br />
+            @Html.LabelFor(x => x.PartyID)
+            @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--")<br />
+            @Html.LabelFor(x => x.Date)
+            @Html.EditorFor(x => x.Date)<br />
+            @Html.LabelFor(x => x.Type)
+            @Html.EnumDropDownListFor(x => x.Type)<br />
+            @Html.LabelFor(x => x.Amount)
+            @Html.EditorFor(x => x.Amount)<br />
+            @Html.LabelFor(x => x.TransferAccountID)
+            @Html.DropDownListFor(x => x.TransferAccountID, Model.Accounts, "--")<br />
             <input type="submit" value="Create" />
         }
     </div>
