--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -1,4 +1,6 @@
-﻿body {
+﻿$grid-gutter-width: 20px;
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -9,16 +11,53 @@
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.panel-group {
+    margin-top: $grid-gutter-width;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.panel-group .panel-heading {
+    padding: 0;
+    position: relative;
+}
+
+.panel-title {
+    font-weight: bold;
+
+    .account-heading-view-toggle {
+        display: block;
+        text-decoration: none;
+        padding: 10px 15px;
+        position: relative;
+        /*span {
+            padding-left: $grid-gutter-width / 2;
+            vertical-align: middle;
+            font-size: 12px;
+            position: absolute;
+            text-align: right;
+            top: 13px;
+            right: 120px;
+        }*/
+    }
+
+    .account-name {
+        padding-left: 10px;
+    }
+
+    .account-balance {
+    }
+
+    .account-heading-add-entry {
+        display: block;
+        text-decoration: none;
+        padding: 9px 15px;
+        text-align: right;
+        width: 150px;
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        a {
+            text-decoration: none;
+        }
+    }
 }
