--- a/money.web/Views/Home/Index.cshtml
+++ b/money.web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                             <a role="button" class="account-heading-view-toggle" data-toggle="collapse" data-parent="#accordion" href="#account-@account.ID-categories" aria-expanded="true" aria-controls="account-@account.ID-categories">
                                 <i class="fa fa-chevron-down"></i> <span class="account-name">@account.Name</span> <span class="account-balance">@account.CurrentBalance.ToString("0.00")</span>
                             </a>
-                            <span class="account-heading-add-entry"><a href="#add-entry-modal" data-toggle="modal" data-target="#add-entry-modal" data-accountid="@account.ID" class="btn-primary btn-sm"><i class="fa fa-plus"></i> Add Entry</a></span>
+                            <span class="account-heading-add-entry"><button data-accountid="@account.ID" data-accountname="@account.Name" class="btn btn-primary btn-xs btn-add-entry"><i class="fa fa-plus"></i> Add Entry</button></span>
                         </h1>
                     </div>
                     <div id="account-@account.ID-categories" class="panel-collapse collapse" role="tabpanel" aria-labelledby="account-@account.ID-heading">
@@ -34,7 +34,7 @@
 
 <!-- Add Entry Modal -->
 <div class="modal fade" id="add-entry-modal" tabindex="-1" role="dialog" aria-labelledby="add-entry-modal-label">
-    @using (Html.BeginForm("Create", "Tasks"))
+    @using (Html.BeginForm("AddEntry", "Home"))
     {
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -43,14 +43,7 @@
                     <h4 class="modal-title" id="add-entry-modal-label">New Entry</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="col-xs-8">
-                            FORM FIELDS HERE
-                        </div>
-                        <div class="col-xs-4">
-                            FORM FIELDS HERE
-                        </div>
-                    </div>
+                    <!-- Content -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
