--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -62,6 +62,22 @@ body {
     }
 }
 
-.progress:last-child {
-    margin-bottom: 0;
+.progress {
+    margin-bottom: 8px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.category-name {
+    font-weight: bold;
+}
+
+.category-spent {
+    padding-left: $grid-gutter-width;
+}
+
+.category-remaining {
+    font-weight: bold;
 }
