--- a/money.web/Views/Home/Index.cshtml
+++ b/money.web/Views/Home/Index.cshtml
@@ -33,6 +33,7 @@
                                     </div>
                                 </div>
                             }
+                            <p>@Html.ActionLink("Entries", "Index", "Entries", new { id = account.ID }, null)</p>
                         </div>
                     </div>
                 </div>
