--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -42,12 +42,23 @@ body {
     padding-left: 10px;
 }
 
+.panel-title .account-balance {
+    display: block;
+    text-decoration: none;
+    padding: 9px 15px;
+    text-align: right;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    right: 120px;
+}
+
 .panel-title .account-heading-add-entry {
     display: block;
     text-decoration: none;
     padding: 9px 15px;
     text-align: right;
-    width: 150px;
+    width: 120px;
     position: absolute;
     top: 0;
     right: 0;
@@ -55,6 +66,11 @@ body {
 
 .panel-title .account-heading-add-entry a {
     text-decoration: none;
+}
+
+.panel-body p:last-child {
+    margin-bottom: 0;
+    text-align: right;
 }
 
 .progress {
