--- a/money.web/Views/Home/AddEntry.cshtml
+++ b/money.web/Views/Home/AddEntry.cshtml
@@ -6,21 +6,35 @@
 
 <div class="row">
     <div class="col-md-12">
-        @Html.HiddenFor(x => x.AccountID, Model.Accounts)
+        @Html.HiddenFor(x => x.AccountID)
+        @Html.HiddenFor(x => x.MonthlyBudgetID)
 
-        @Html.LabelFor(x => x.MonthlyBudgetID)
-        @Html.DropDownListFor(x => x.MonthlyBudgetID, Model.MonthlyBudgets)<br />
-        @Html.LabelFor(x => x.CategoryID)
-        @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--")<br />
-        @Html.LabelFor(x => x.PartyID)
-        @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--")<br />
-        @Html.LabelFor(x => x.Date)
-        @Html.EditorFor(x => x.Date)<br />
-        @Html.LabelFor(x => x.Type)
-        @Html.EnumDropDownListFor(x => x.Type)<br />
-        @Html.LabelFor(x => x.Amount)
-        @Html.EditorFor(x => x.Amount)<br />
-        @Html.LabelFor(x => x.TransferAccountID)
-        @Html.DropDownListFor(x => x.TransferAccountID, Model.Accounts, "--")<br />
+        <div class="form-group">
+            @Html.LabelFor(x => x.Date)
+            @Html.EditorFor(x => x.Date)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(x => x.CategoryID)
+            @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--", new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(x => x.PartyID)
+            @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--", new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(x => x.Type) / @Html.LabelFor(x => x.Amount)
+            <div class="row">
+                <div class="col-xs-4">
+                    @Html.EnumDropDownListFor(x => x.Type, new { @class = "form-control" })
+                </div>
+                <div class="col-xs-8">
+                    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(x => x.TransferAccountID)
+            @Html.DropDownListFor(x => x.TransferAccountID, Model.Accounts, "--", new { @class = "form-control" })<br />
+        </div>
     </div>
 </div>
