--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -39,29 +39,29 @@ body {
 }
 
 .panel-title .account-name {
-    padding-left: 10px;
+    position: absolute;
+    top: 11px;
+    left: 40px;
 }
 
 .panel-title .account-balance {
     display: block;
     text-decoration: none;
-    padding: 9px 15px;
     text-align: right;
     width: 150px;
     position: absolute;
-    top: 0;
-    right: 120px;
+    top: 11px;
+    right: 70px;
 }
 
 .panel-title .account-heading-add-entry {
     display: block;
     text-decoration: none;
-    padding: 9px 15px;
     text-align: right;
     width: 120px;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 9px;
+    right: 12px;
 }
 
 .panel-title .account-heading-add-entry a {
