--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -40,29 +40,29 @@ body {
     }
 
     .account-name {
-        padding-left: 10px;
+        position: absolute;
+        top: 11px;
+        left: 40px;
     }
 
     .account-balance {
         display: block;
         text-decoration: none;
-        padding: 9px 15px;
         text-align: right;
         width: 150px;
         position: absolute;
-        top: 0;
-        right: 120px;
+        top: 11px;
+        right: 70px;
     }
 
     .account-heading-add-entry {
         display: block;
         text-decoration: none;
-        padding: 9px 15px;
         text-align: right;
         width: 120px;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 9px;
+        right: 12px;
 
         a {
             text-decoration: none;
