--- a/money.web/Views/Home/AddEntry.cshtml
+++ b/money.web/Views/Home/AddEntry.cshtml
@@ -11,7 +11,14 @@
 
         <div class="form-group">
             @Html.LabelFor(x => x.Date)
-            @Html.EditorFor(x => x.Date)
+            <div class="row">
+                <div class="col-xs-7">
+                    @Html.EditorFor(x => x.Date)
+                </div>
+                <div class="col-xs-5">
+                    <button class="btn btn-default btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
+                </div>
+            </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(x => x.CategoryID)
@@ -24,10 +31,10 @@
         <div class="form-group">
             @Html.LabelFor(x => x.Type) / @Html.LabelFor(x => x.Amount)
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-5">
                     @Html.EnumDropDownListFor(x => x.Type, new { @class = "form-control" })
                 </div>
-                <div class="col-xs-8">
+                <div class="col-xs-7">
                     @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number" })
                 </div>
             </div>
