--- a/money.web/Views/Home/Index.cshtml
+++ b/money.web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                             <a role="button" class="account-heading-view-toggle" data-toggle="collapse" data-parent="#accordion" href="#account-@account.ID-categories" aria-expanded="true" aria-controls="account-@account.ID-categories">
                                 <i class="fa fa-chevron-down"></i> <span class="account-name">@account.Name</span> <span class="account-balance">@account.CurrentBalance.ToString("0.00")</span>
                             </a>
-                            <span class="account-heading-add-entry"><button data-accountid="@account.ID" data-accountname="@account.Name" class="btn btn-primary btn-xs btn-add-entry"><i class="fa fa-plus"></i> Add Entry</button></span>
+                            <span class="account-heading-add-entry"><button data-accountid="@account.ID" data-accountname="@account.Name" class="btn btn-primary btn-xs btn-add-entry"><i class="fa fa-plus"></i> Add</button></span>
                         </h1>
                     </div>
                     <div id="account-@account.ID-categories" class="panel-collapse collapse @((Model.AccountID.HasValue && Model.AccountID.Value == account.ID) ? "in" : "")" role="tabpanel" aria-labelledby="account-@account.ID-heading">
