--- a/money.web/Views/Home/Index.cshtml
+++ b/money.web/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Home Page";
 }
 
+<script>
+    const _ADD_ENTRY_URL = '@Url.Action("AddEntry", "Home")';
+</script>
+
 <div class="row">
     <div class="col-md-12">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
