--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Money</title>
+    <link rel="shortcut icon" href="~/Content/favicon.ico" />
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 </head>
