Implement AJAX entry form and partial updates of overview

--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -21,7 +21,7 @@ body {
 }
 
 .row-budget {
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 .account-balance {
@@ -42,7 +42,7 @@ body {
 }
 
 .category-spent {
-    padding-left: 15px;
+    padding-left: 20px;
 }
 
 .category-remaining {
@@ -66,4 +66,19 @@ body {
     user-select: none;
     background-image: none;
     border: 1px solid transparent;
+}
+
+.navbar-header .load-indicator {
+    float: left;
+    padding: 15px;
+    line-height: 20px;
+}
+
+.modal-footer .load-indicator {
+    float: left;
+    padding-left: 5px;
+}
+
+.load-indicator-hidden {
+    visibility: hidden;
 }
