--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Money", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <div class="load-indicator"><img src="~/Content/ajax-loader-light.gif" class="load-indicator-hidden" /></div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
