--- a/money.web/Views/Entries/Index.cshtml
+++ b/money.web/Views/Entries/Index.cshtml
@@ -6,12 +6,10 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1>Entries</h1>
+        <h1>@(Model?.Entries?.FirstOrDefault()?.FirstOrDefault()?.Account)</h1>
         <table class="table table-condensed table-striped">
             <thead>
                 <tr>
-                    <th>Account</th>
-                    <th>Date</th>
                     <th>Category/Party</th>
                     <th>Amount</th>
                     <th>Edit</th>
@@ -21,21 +19,26 @@
                 @foreach (var group in Model.Entries)
                 {
                     <tr>
-                        <th colspan="5">@group.Key.ToString("dd/MM/yyyy")</th>
+                        <th colspan="3">@group.Key.ToString("dd/MM/yyyy")</th>
                     </tr>
 
                     foreach (var entry in group)
                     {
-                        var category = string.IsNullOrWhiteSpace(entry.Category) 
-                                     ? null 
-                                     : string.IsNullOrWhiteSpace(entry.Party) 
-                                     ? entry.Category 
+                        var party = entry.Party;
+
+                        var category = string.IsNullOrWhiteSpace(entry.Category)
+                                     ? null
+                                     : string.IsNullOrWhiteSpace(entry.Party)
+                                     ? entry.Category
                                      : $"({entry.Category})";
 
+                        var partyAndCategory = string.IsNullOrWhiteSpace(party)
+                                            && string.IsNullOrWhiteSpace(category)
+                                             ? "--"
+                                             : $"{party} {category}";
+
                         <tr>
-                            <td>@entry.Account</td>
-                            <td>@entry.Date.ToString("dd/MM/yyyy")</td>
-                            <td>@entry.Party @category</td>
+                            <td>@partyAndCategory</td>
                             <td>@entry.Amount.ToString("0.00")</td>
                             <td>@Html.ActionLink("Edit", "Update", new { id = entry.ID })</td>
                         </tr>
@@ -43,7 +46,5 @@
                 }
             </tbody>
         </table>
-
-        @Html.ActionLink("New", "Create")
     </div>
 </div>
