--- a/money.web/Views/MonthlyBudgets/Create.cshtml
+++ b/money.web/Views/MonthlyBudgets/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-12">
         <h1>Create Monthly Budget</h1>
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("Create", "MonthlyBudgets"))
         {
             @Html.EditorForModel()
             @Html.EditorFor(x => x.Categories)
