--- a/money.web/Views/Accounts/Create.cshtml
+++ b/money.web/Views/Accounts/Create.cshtml
@@ -9,8 +9,25 @@
         <h1>Create Account</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
-            <input type="submit" value="Create" />
+            <div class="form-group">
+                @Html.LabelFor(x => x.Name)
+                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Type)
+                @Html.EnumDropDownListFor(x => x.Type, "Please select...", new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.StartingBalance)
+                @Html.TextBoxFor(x => x.StartingBalance, new { @class = "form-control" })
+            </div>
+            <div class="checkbox">
+                <label>
+                    @Html.CheckBoxFor(x => x.IncludeInNetWorth) Include balance in net worth
+                </label>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Create</button>
         }
     </div>
 </div>
