--- a/money.web/Views/Accounts/Update.cshtml
+++ b/money.web/Views/Accounts/Update.cshtml
@@ -9,14 +9,31 @@
         <h1>Update Account</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
-            <input type="submit" value="Update" />
+            <div class="form-group">
+                @Html.LabelFor(x => x.Name)
+                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Type)
+                @Html.EnumDropDownListFor(x => x.Type, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.StartingBalance)
+                @Html.TextBoxFor(x => x.StartingBalance, new { @class = "form-control" })
+            </div>
+            <div class="checkbox">
+                <label>
+                    @Html.CheckBoxFor(x => x.IncludeInNetWorth) Include balance in net worth
+                </label>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Update</button>
         }
 
         @using (Html.BeginForm("Delete", "Accounts"))
         {
             @Html.HiddenFor(x => x.ID)
-            <input type="submit" value="Delete" />
+            <button type="submit" class="btn btn-danger">Delete</button>
         }
     </div>
 </div>
